# minisql

./: .gitignore  Pipfile  README.md  pyproject.toml
docs/: language.md
examples/: invalid.sql  valid.sql
src/sqlmini/: __init__.py  ast.py  ast_dump.py  cli.py  errors.py  interp.py  lexer.py  optimize.py  parser.py  semantic.py  symbols.py  tac.py  tokens.py
tests/: test_interp.py  test_lexer.py  test_optimize.py  test_parser.py  test_semantic.py
